// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fe-arrow-down icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <line
    x1="12"
    x2="12"
    y1="5"
    y2="19"
  />
  <polyline
    points="19 12 12 19 5 12"
  />
</svg>
`;

exports[`fe-arrow-left icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <line
    x1="19"
    x2="5"
    y1="12"
    y2="12"
  />
  <polyline
    points="12 19 5 12 12 5"
  />
</svg>
`;

exports[`fe-arrow-right icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <line
    x1="5"
    x2="19"
    y1="12"
    y2="12"
  />
  <polyline
    points="12 5 19 12 12 19"
  />
</svg>
`;

exports[`fe-arrow-up icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <line
    x1="12"
    x2="12"
    y1="19"
    y2="5"
  />
  <polyline
    points="5 12 12 5 19 12"
  />
</svg>
`;

exports[`fe-check icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <polyline
    points="20 6 9 17 4 12"
  />
</svg>
`;

exports[`fe-chevron-down icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <polyline
    points="6 9 12 15 18 9"
  />
</svg>
`;

exports[`fe-cloud icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M18 10h-1.26A8 8 0 1 0 9 20h9a5 5 0 0 0 0-10z"
  />
</svg>
`;

exports[`fe-copy icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    height="13"
    rx="2"
    ry="2"
    width="13"
    x="9"
    y="9"
  />
  <path
    d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
  />
</svg>
`;

exports[`fe-corner-down-left icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <polyline
    points="9 10 4 15 9 20"
  />
  <path
    d="M20 4v7a4 4 0 0 1-4 4H4"
  />
</svg>
`;

exports[`fe-download icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
  />
  <polyline
    points="7 10 12 15 17 10"
  />
  <line
    x1="12"
    x2="12"
    y1="15"
    y2="3"
  />
</svg>
`;

exports[`fe-edit icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
  />
  <path
    d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
  />
</svg>
`;

exports[`fe-external-link icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
  />
  <polyline
    points="15 3 21 3 21 9"
  />
  <line
    x1="10"
    x2="21"
    y1="14"
    y2="3"
  />
</svg>
`;

exports[`fe-filter icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <polygon
    points="22 3 2 3 10 12.46 10 19 14 21 14 12.46 22 3"
  />
</svg>
`;

exports[`fe-github icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
  />
</svg>
`;

exports[`fe-info icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="12"
    cy="12"
    r="10"
    stroke="#0095a9"
  />
  <line
    stroke="#0095a9"
    x1="12"
    x2="12"
    y1="16"
    y2="12"
  />
  <line
    stroke="#0095a9"
    x1="12"
    x2="12.01"
    y1="8"
    y2="8"
  />
</svg>
`;

exports[`fe-link-2 icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M15 7h3a5 5 0 0 1 5 5 5 5 0 0 1-5 5h-3m-6 0H6a5 5 0 0 1-5-5 5 5 0 0 1 5-5h3"
  />
  <line
    x1="8"
    x2="16"
    y1="12"
    y2="12"
  />
</svg>
`;

exports[`fe-loader icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <line
    x1="12"
    x2="12"
    y1="2"
    y2="6"
  />
  <line
    x1="12"
    x2="12"
    y1="18"
    y2="22"
  />
  <line
    x1="4.93"
    x2="7.76"
    y1="4.93"
    y2="7.76"
  />
  <line
    x1="16.24"
    x2="19.07"
    y1="16.24"
    y2="19.07"
  />
  <line
    x1="2"
    x2="6"
    y1="12"
    y2="12"
  />
  <line
    x1="18"
    x2="22"
    y1="12"
    y2="12"
  />
  <line
    x1="4.93"
    x2="7.76"
    y1="19.07"
    y2="16.24"
  />
  <line
    x1="16.24"
    x2="19.07"
    y1="7.76"
    y2="4.93"
  />
</svg>
`;

exports[`fe-log-in icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"
  />
  <polyline
    points="10 17 15 12 10 7"
  />
  <line
    x1="15"
    x2="3"
    y1="12"
    y2="12"
  />
</svg>
`;

exports[`fe-moon icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"
  />
</svg>
`;

exports[`fe-pen icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12 19l7-7 3 3-7 7-3-3z"
  />
  <path
    d="M18 13l-1.5-7.5L2 2l3.5 14.5L13 18l5-5z"
  />
  <path
    d="M2 2l7.586 7.586"
  />
  <circle
    cx="11"
    cy="11"
    r="2"
  />
</svg>
`;

exports[`fe-plus icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <polygon
    points="14,7 8,7 8,1 7,1 7,7 1,7 1,8 7,8 7,14 8,14 8,8 14,8 "
  />
</svg>
`;

exports[`fe-search icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="11"
    cy="11"
    r="8"
  />
  <line
    x1="21"
    x2="16.65"
    y1="21"
    y2="16.65"
  />
</svg>
`;

exports[`fe-sun icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="12"
    cy="12"
    r="5"
  />
  <line
    x1="12"
    x2="12"
    y1="1"
    y2="3"
  />
  <line
    x1="12"
    x2="12"
    y1="21"
    y2="23"
  />
  <line
    x1="4.22"
    x2="5.64"
    y1="4.22"
    y2="5.64"
  />
  <line
    x1="18.36"
    x2="19.78"
    y1="18.36"
    y2="19.78"
  />
  <line
    x1="1"
    x2="3"
    y1="12"
    y2="12"
  />
  <line
    x1="21"
    x2="23"
    y1="12"
    y2="12"
  />
  <line
    x1="4.22"
    x2="5.64"
    y1="19.78"
    y2="18.36"
  />
  <line
    x1="18.36"
    x2="19.78"
    y1="5.64"
    y2="4.22"
  />
</svg>
`;

exports[`fe-thumbsdown icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M10 15v4a3 3 0 0 0 3 3l4-9V2H5.72a2 2 0 0 0-2 1.7l-1.38 9a2 2 0 0 0 2 2.3zm7-13h2.67A2.31 2.31 0 0 1 22 4v7a2.31 2.31 0 0 1-2.33 2H17"
  />
</svg>
`;

exports[`fe-thumbsup icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M14 9V5a3 3 0 0 0-3-3l-4 9v11h11.28a2 2 0 0 0 2-1.7l1.38-9a2 2 0 0 0-2-2.3zM7 22H4a2 2 0 0 1-2-2v-7a2 2 0 0 1 2-2h3"
  />
</svg>
`;

exports[`fe-x icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: none;
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
}

<svg
  className="emotion-0"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <line
    x1="18"
    x2="6"
    y1="6"
    y2="18"
  />
  <line
    x1="6"
    x2="18"
    y1="6"
    y2="18"
  />
</svg>
`;

exports[`logo-android icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  --primary-color: black;
  --accent-color: white;
}

.dark-mode .emotion-0 {
  --primary-color: white;
  --accent-color: black;
}

<svg
  className="emotion-0"
  viewBox="-147 -70 294 345"
  xmlns="http://www.w3.org/2000/svg"
  xmlnsXlink="http://www.w3.org/1999/xlink"
>
  <g
    fill="var(--primary-color)"
  >
    <use
      stroke="var(--accent-color)"
      strokeWidth="14.4"
      xlinkHref="#a"
    />
    <use
      transform="scale(-1 1)"
      xlinkHref="#b"
    />
    <g
      id="b"
      stroke="var(--accent-color)"
      strokeWidth="7.2"
    >
      <rect
        height="86"
        rx="6.5"
        transform="rotate(29)"
        width="13"
        x="14"
        y="-86"
      />
      <rect
        height="133"
        id="c"
        rx="24"
        width="48"
        x="-143"
        y="41"
      />
      <use
        x="85"
        xlinkHref="#c"
        y="97"
      />
    </g>
    <g
      id="a"
    >
      <ellipse
        cy="41"
        rx="91"
        ry="84"
      />
      <rect
        height="182"
        rx="22"
        width="182"
        x="-91"
        y="20"
      />
    </g>
  </g>
  <g
    fill="var(--accent-color)"
    stroke="var(--accent-color)"
    strokeWidth="7.2"
  >
    <path
      d="M-95 44.5H95"
    />
    <circle
      cx="-42"
      r="4"
    />
    <circle
      cx="42"
      r="4"
    />
  </g>
</svg>
`;

exports[`logo-apple icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  fill: black;
}

.dark-mode .emotion-0 {
  fill: white;
}

<svg
  className="emotion-0"
  viewBox="0 0 1000 1187.198"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M979.042 925.188c-17.954 41.477-39.206 79.657-63.828 114.759-33.563 47.853-61.044 80.976-82.222 99.37-32.83 30.192-68.006 45.654-105.672 46.533-27.041 0-59.652-7.694-97.611-23.303-38.085-15.536-73.084-23.23-105.086-23.23-33.563 0-69.56 7.694-108.061 23.23-38.561 15.609-69.625 23.743-93.376 24.55-36.12 1.538-72.123-14.364-108.06-47.78-22.938-20.006-51.627-54.302-85.997-102.888-36.875-51.883-67.191-112.047-90.942-180.639C12.751 781.703 0 709.96 0 640.504c0-79.562 17.192-148.183 51.627-205.687 27.063-46.19 63.066-82.625 108.127-109.373 45.06-26.748 93.749-40.378 146.182-41.25 28.69 0 66.312 8.874 113.066 26.315 46.622 17.5 76.557 26.374 89.682 26.374 9.812 0 43.068-10.376 99.443-31.064 53.313-19.185 98.307-27.129 135.168-24 99.883 8.062 174.923 47.436 224.828 118.372-89.33 54.126-133.52 129.936-132.64 227.188.806 75.751 28.287 138.788 82.295 188.84 24.476 23.23 51.81 41.183 82.222 53.934-6.595 19.127-13.557 37.447-20.958 55.035zM749.964 23.75c0 59.374-21.692 114.81-64.928 166.122-52.176 61-115.286 96.248-183.724 90.686a184.836 184.836 0 01-1.378-22.497c0-56.999 24.813-117.998 68.878-167.874 21.999-25.253 49.978-46.25 83.907-63 33.856-16.5 65.88-25.625 95.999-27.187.88 7.937 1.246 15.875 1.246 23.75z"
  />
</svg>
`;

exports[`logo-newrelic icon matches its snapshot 1`] = `
.emotion-2 {
  width: 1em;
  height: 1em;
}

.emotion-0 {
  fill: var(--primary-text-color);
}

<svg
  className="emotion-2"
  viewBox="0 0 32 32"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M23.2043 11.0778V20.9232L14.6196 25.8469V32.0005L28.5741 24.001V8L23.2043 11.0778Z"
    fill="#00AC69"
  />
  <path
    d="M14.6209 6.15563L23.2056 11.0773L28.5754 7.9995L14.6209 0L0.666504 7.9995L6.03422 11.0773L14.6209 6.15563Z"
    fill="#1CE783"
  />
  <path
    className="text-color emotion-0 emotion-1"
    d="M9.25323 19.0793V28.9247L14.6209 32.0005V16.0015L0.666504 8V14.1556L9.25323 19.0793Z"
  />
</svg>
`;

exports[`nr-ai icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  stroke: currentColor;
}

<svg
  className="emotion-0"
  viewBox="0 0 47 54"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <path
      d="M11.132 10.134h4.607v6.478M8.8 41.232l3.49 2.64h3.457"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.317"
    />
    <g
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.317"
    >
      <path
        d="M23.83 3.396v45.61l-3.11 2.332-10.366-4.146-1.555-5.96-3.887-2.592-2.85-11.143 2.85-12.957 6.22-4.406.777-4.924 8.034-3.11z"
      />
      <path
        d="M23.796 3.396v45.61l3.11 2.332 10.366-4.146 1.555-5.96 3.887-2.592 2.85-11.143-2.85-12.957-6.22-4.406-.777-4.924-8.033-3.11z"
      />
    </g>
    <path
      d="M23.92 35.993h4.303l2.38 4.76M32.317 27.618h-16.23l-3.145 5.041M23.878 19.277h4.55l2.131-4.222"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.317"
    />
    <path
      d="M29.41 12.607a2.471 2.471 0 114.942 0 2.471 2.471 0 01-4.942 0"
      fill="#0AB0BF"
    />
    <path
      d="M29.41 12.607a2.471 2.471 0 114.942 0 2.471 2.471 0 01-4.942 0z"
      stroke="#0AB0BF"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.317"
    />
    <path
      d="M29.205 43.142a2.471 2.471 0 114.943 0 2.471 2.471 0 01-4.943 0"
      fill="#0AB0BF"
    />
    <path
      d="M29.205 43.142a2.471 2.471 0 114.943 0 2.471 2.471 0 01-4.943 0z"
      stroke="#0AB0BF"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.317"
    />
    <path
      d="M32.313 27.587a2.471 2.471 0 114.942 0 2.471 2.471 0 01-4.942 0"
      fill="#0AB0BF"
    />
    <path
      d="M32.313 27.587a2.471 2.471 0 114.942 0 2.471 2.471 0 01-4.942 0z"
      stroke="#0AB0BF"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.317"
    />
    <path
      d="M9.45 35.01a2.471 2.471 0 114.942 0 2.471 2.471 0 01-4.942 0"
      fill="#0AB0BF"
    />
    <path
      d="M9.45 35.01a2.471 2.471 0 114.942 0 2.471 2.471 0 01-4.942 0z"
      stroke="#0AB0BF"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.317"
    />
  </g>
</svg>
`;

exports[`nr-dark-mode-toggle icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  stroke: currentColor;
}

.emotion-0 path {
  fill: currentColor;
}

<svg
  className="emotion-0"
  fill="none"
  viewBox="0 0 27 27"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M13.0001 20.0722C14.8758 20.0722 16.6746 19.3271 18.0009 18.0008C19.3272 16.6745 20.0723 14.8757 20.0723 13C20.0723 11.1244 19.3272 9.32553 18.0009 7.99924C16.6746 6.67296 14.8758 5.92786 13.0001 5.92786V13L13.0001 20.0722Z"
    fill="#F3F4F4"
  />
  <circle
    cx="12.9999"
    cy="13"
    r="7.57215"
    stroke="#F3F4F4"
  />
  <line
    stroke="#F3F4F4"
    strokeLinecap="round"
    x1="13.1826"
    x2="13.1826"
    y1="0.5"
    y2="2.76407"
  />
  <line
    stroke="#F3F4F4"
    strokeLinecap="round"
    x1="25.6125"
    x2="23.3485"
    y1="13.106"
    y2="13.106"
  />
  <line
    stroke="#F3F4F4"
    strokeLinecap="round"
    x1="13.106"
    x2="13.106"
    y1="23.3485"
    y2="25.6126"
  />
  <line
    stroke="#F3F4F4"
    strokeLinecap="round"
    x1="22.0242"
    x2="20.4232"
    y1="4.26704"
    y2="5.86798"
  />
  <line
    stroke="#F3F4F4"
    strokeLinecap="round"
    x1="21.8998"
    x2="20.2989"
    y1="21.9701"
    y2="20.3692"
  />
</svg>
`;

exports[`nr-fso icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  stroke: currentColor;
}

<svg
  className="emotion-0"
  viewBox="0 0 67 54"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <path
      d="M16.609 35.907h48.175V2.077H16.61z"
      fill="var(--primary-background-color)"
    />
    <path
      d="M16.609 35.907h48.175V2.077H16.61z"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.785"
    />
    <path
      d="M20.976 8.328a.987.987 0 111.974 0 .987.987 0 01-1.974 0"
      fill="#0BAFBE"
    />
    <path
      d="M20.976 8.328a.987.987 0 111.974 0 .987.987 0 01-1.974 0z"
      stroke="#0BAFBE"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.785"
    />
    <path
      d="M25.676 8.351h14.829"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.785"
    />
    <path
      d="M21.098 12.954a.987.987 0 111.974 0 .987.987 0 01-1.974 0"
      fill="#0BAFBE"
    />
    <path
      d="M21.098 12.954a.987.987 0 111.974 0 .987.987 0 01-1.974 0z"
      stroke="#0BAFBE"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.785"
    />
    <path
      d="M25.746 12.978H40.37"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.785"
    />
    <path
      d="M2.073 51.401H50.25v-33.83H2.073z"
      fill="var(--primary-background-color)"
    />
    <path
      d="M2.073 51.401H50.25v-33.83H2.073zM33.044 36.331l7.611-8.68M22.617 32.637l5.838 4.24M10.931 40.66l6.95-7.595"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.785"
    />
    <path
      d="M17.495 30.742a2.91 2.91 0 115.822 0 2.91 2.91 0 01-5.822 0"
      fill="#0BAFBE"
    />
    <path
      d="M17.495 30.742a2.91 2.91 0 115.822 0 2.91 2.91 0 01-5.822 0z"
      stroke="#0BAFBE"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.785"
    />
    <path
      d="M28.455 38.7a2.909 2.909 0 014.538-2.413 2.91 2.91 0 11-4.538 2.413"
      fill="#0BAFBE"
    />
    <path
      d="M28.455 38.7a2.909 2.909 0 014.538-2.413 2.91 2.91 0 11-4.538 2.413z"
      stroke="#0BAFBE"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.785"
    />
    <path
      d="M6.056 42.806a2.91 2.91 0 115.821 0 2.91 2.91 0 01-5.821 0"
      fill="#0BAFBE"
    />
    <path
      d="M6.056 42.806a2.91 2.91 0 115.821 0 2.91 2.91 0 01-5.821 0z"
      stroke="#0BAFBE"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.785"
    />
    <path
      d="M39.75 25.541a2.91 2.91 0 115.822 0 2.91 2.91 0 01-5.821 0"
      fill="#0BAFBE"
    />
    <path
      d="M39.75 25.541a2.91 2.91 0 115.822 0 2.91 2.91 0 01-5.821 0z"
      stroke="#0BAFBE"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.785"
    />
  </g>
</svg>
`;

exports[`nr-i18n icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  stroke: currentColor;
}

<svg
  className="emotion-0"
  fill="none"
  viewBox="0 0 20 20"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="10.0001"
    cy="10"
    r="9.09091"
    strokeWidth="1.5"
  />
  <path
    d="M10.2842 18.512C7.84969 16.4278 6.30688 13.3321 6.30688 9.87611C6.30688 6.5488 7.73691 3.55549 10.0159 1.47726"
    strokeWidth="1.5"
  />
  <path
    d="M9.71609 18.512C12.1505 16.4278 13.6934 13.3321 13.6934 9.87611C13.6934 6.5488 12.2633 3.55549 9.98435 1.47726"
    strokeWidth="1.5"
  />
  <line
    strokeWidth="1.5"
    x1="1.81812"
    x2="18.1818"
    y1="6.52274"
    y2="6.52274"
  />
  <line
    strokeWidth="1.5"
    x1="0.90918"
    x2="18.1819"
    y1="12.8864"
    y2="12.8864"
  />
</svg>
`;

exports[`nr-tdp icon matches its snapshot 1`] = `
.emotion-0 {
  width: 1em;
  height: 1em;
  stroke: currentColor;
}

<svg
  className="emotion-0"
  viewBox="0 0 54 53"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <path
      d="M46.898 12.204h-5.102"
      stroke="#2C2C2C"
      strokeLinecap="square"
      strokeLinejoin="round"
      strokeWidth="2.337"
    />
    <path
      d="M51.954 11.716a2.351 2.351 0 10-4.703 0 2.351 2.351 0 004.703 0"
      fill="#0AB0BF"
    />
    <path
      d="M51.954 11.716a2.351 2.351 0 10-4.703 0 2.351 2.351 0 004.703 0z"
      stroke="#0AB0BF"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.337"
    />
    <path
      d="M47.251 41.667h-5.58"
      stroke="#2C2C2C"
      strokeLinecap="square"
      strokeLinejoin="round"
      strokeWidth="2.337"
    />
    <path
      d="M51.954 41.66a2.351 2.351 0 10-4.703 0 2.351 2.351 0 004.703 0"
      fill="#0AB0BF"
    />
    <path
      d="M51.954 41.66a2.351 2.351 0 10-4.703 0 2.351 2.351 0 004.703 0z"
      stroke="#0AB0BF"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.337"
    />
    <path
      d="M6.703 27.355h5.579"
      stroke="#2C2C2C"
      strokeLinecap="square"
      strokeLinejoin="round"
      strokeWidth="2.337"
    />
    <path
      d="M2 27.361a2.351 2.351 0 104.703 0 2.351 2.351 0 00-4.703 0"
      fill="#0AB0BF"
    />
    <path
      d="M2 27.361a2.351 2.351 0 104.703 0 2.351 2.351 0 00-4.703 0z"
      stroke="#0AB0BF"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.337"
    />
    <path
      d="M12.68 5.636v10.247c.022.101.057.197.057.305 0 1.965 5.624 4.821 14.437 4.821 8.813 0 14.438-2.856 14.438-4.821 0-.115.036-.22.06-.326V5.633M27.174 36.385c8.813 0 14.438-2.856 14.438-4.821 0-.115.036-.22.06-.326V21.009c-3.147 2.285-8.84 3.467-14.498 3.467-5.656 0-11.345-1.182-14.493-3.464v10.247c.021.1.056.197.056.305 0 1.965 5.624 4.821 14.437 4.821z"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.337"
    />
    <path
      d="M27.174 39.818c-5.656 0-11.345-1.182-14.493-3.462v8.314c0 .031-.003.06-.003.093 0 4.57 7.469 7.034 14.493 7.034 7.028 0 14.497-2.464 14.497-7.034h.003v-8.41c-3.146 2.282-8.84 3.465-14.497 3.465zM41.671 5.633c0 1.997-6.49 3.616-14.495 3.616-8.006 0-14.495-1.619-14.495-3.616 0-1.996 6.49-3.615 14.495-3.615 8.006 0 14.495 1.619 14.495 3.615z"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2.337"
    />
  </g>
</svg>
`;
